--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-    "name": "express-app",
-    "version": "1.0.0",
-    "description": "A simple Express app deployed in Docker",
-    "main": "app.js",
-    "scripts": {
-      "start": "node app.js"
-    },
-    "dependencies": {
-      "express": "^4.18.2"
-    },
-    "author": "",
-    "license": "ISC"
+  "name": "simple-frontend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.7.9",
+    "express": "^4.21.2"
   }
-  
+}
